Fix debug=gc+phases time tracking in Remark and Cleanup

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • gc
    • b11

      In recent changes lots of time tracking using the GCTraceTime class has been added wrongly.

      In particular these lines look like:

      {
        GCTraceTime(Debug, gc, phases)(<some-string>);
        ...
      }

      This does not track the time in the braces as there is no instance variable defined, i.e. the instance immediately destructed. This results in many "0.000ms" entries in the log.

      This should be fixed.

      Further use the _gc_timer_cm in all these phases to automatically add JFR events.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: