8200730: Fix debug=gc+phases time tracking in Remark and Cleanup

Timing in Remark and Cleanup pauses did not use instance variables for the scoped timing objects, so these durations were always zero.

Reviewed-by: sangheki, sjohanss